kubernetes/prowlarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: movies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      restartPolicy: Always
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          # image: ghcr.io/almottier/prowlarr-ygg
          imagePullPolicy: Always
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
          ports:
            - containerPort: 9696
      volumes:
        - name: prowlarr-config
          hostPath:
            path: /home/thelegend27/homeserver/movies/prowlarr/config
