kubernetes/prowlarr/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: movies
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9696
      name: http
